change workshop title

--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
 <!-- Page title -->
 <div class="page-title top-content">
     <div class="page-title-text wow fadeInUp">
-        <h1> International Workshop on Deep Learning for Music</h1>
-        <p><b>Held in conjunction with the 2017 International Joint Conference on Neural Networks (IJCNN 2017))</b></p><p>18-19 May 2017 <a href="www.ijcnn.org/program-overview" style="color: black;"></a>, Anchorage</p>
+        <h1> International Workshop on Emerging AI Technologies for Music</h1>
+        <p><b>Held in conjunction with the 2025 International Joint Conference on Neural Networks (AAAI 2026))</b></p><p>x-y Jan 2026 <a href="www.ijcnn.org/program-overview" style="color: black;"></a>, Anchorage</p>
         <div class="page-title-bottom-link">
             <a class="big-link-1 btn scroll-link" href="#pricing-2"><b>Program/Proceedings</b></a>
             <a class="big-link-2 btn scroll-link" href="#portfolio"><b>Speakers</b></a>
