--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 <div class="page-title top-content">
     <div class="page-title-text wow fadeInUp">
         <h1> International Workshop on Emerging AI Technologies for Music</h1>
-        <p><b>Held in conjunction with the 2025 International Joint Conference on Neural Networks (AAAI 2026))</b></p><p>x-y Jan 2026 <a href="www.ijcnn.org/program-overview" style="color: black;"></a>, Anchorage</p>
+        <p><b>Held in conjunction with the 2025 International Joint Conference on Neural Networks (AAAI 2026)</b></p><p>26th or 27th January 2026 <a href="www.ijcnn.org/program-overview" style="color: black;"></a>, Singapore</p>
         <div class="page-title-bottom-link">
             <a class="big-link-1 btn scroll-link" href="#pricing-2"><b>Program/Proceedings</b></a>
             <a class="big-link-2 btn scroll-link" href="#portfolio"><b>Speakers</b></a>
@@ -115,9 +115,7 @@
 
 
                 </p>
-                <p>
-
-Papers and abstracts on the application of deep learning techniques on music are welcomed, including but not limited to:
+                <p> Papers and abstracts on the application of deep learning techniques on music are welcomed, including but not limited to:
 
                 <ul style="font-size: 1.5em; text-align:left; list-style-type:none">
                     <li><span aria-hidden="true" class="icon_plus list-icon"></span>Deep learning applications for
