--- a/index.html
+++ b/index.html
@@ -105,15 +105,7 @@
             <div class="col-sm-12 block-2-left section-description wow fadeIn">
                 <h2>Workshop Description</h2>
                 <div class="divider-1 wow fadeInUp block-2-box "><span></span></div>
-                <p> There has been tremendous interest in deep learning across many fields of study. Recently, these techniques have gained popularity in the field of music. Projects such as Magenta (Google's Brain Team's music generation project), Jukedeck and others testify to their potential.
-                
-                </p><p>
-                
-                While humans can rely on their intuitive understanding of musical patterns and the relationships between them, it remains a challenging task for computers to capture and quantify musical structures. Recently, researchers have attempted to use deep learning models to learn features and relationships that allow us to accomplish tasks in music transcription, audio feature extraction, emotion recognition, music recommendation, and automated music generation.
-                </p><p>
-                With this workshop we aim to advance the state-of-the-art in machine intelligence for music by bringing together researchers in the field of music and deep learning. This will enable us to critically review and discuss cutting-edge-research so as to identify grand challenges, effective methodologies, and potential new applications.
-
-
+                <p> This full day workshop, part of a new annual series on the latest developments in AI for music, explores the emerging frontier of AI technologies that serve not just as automation tools but as collaborators in creative expression. As AI systems reshape how music is composed, performed, and produced, this workshop highlights the importance of keeping humans actively in the loop through prompt-based interfaces, multimodal workflows and other interactive AI tools. We aim to explore the latest research in human-centric AI for music and discuss how systems can empower humans to guide, steer, and shape AI outputs through intuitive interfaces, interactive workflows, interpretable systems and meaningful user-controls. While early music AI focused on fully autonomous models, the field is increasingly shifting toward co-creative and controllable systems, reflecting growing recognition that meaningful musical outcomes arise through human-machine collaboration. As the inaugural workshop in this planned annual series, we will explore how AI systems can be designed to amplify rather than replace human creativity.
                 </p>
                 <p> Papers and abstracts on the application of deep learning techniques on music are welcomed, including but not limited to:
 
