--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 <div class="page-title top-content">
     <div class="page-title-text wow fadeInUp">
         <h1> International Workshop on Emerging AI Technologies for Music</h1>
-        <p><b>Held in conjunction with the 2025 International Joint Conference on Neural Networks (AAAI 2026)</b></p><p>26th or 27th January 2026 <a href="www.ijcnn.org/program-overview" style="color: black;"></a>, Singapore</p>
+        <p><b>Held in conjunction with the 2025 International Joint Conference on Neural Networks (AAAI 2026)</b></p><p>26th or 27th January 2026<a href="www.ijcnn.org/program-overview" style="color: black;"></a>, Singapore</p>
         <div class="page-title-bottom-link">
             <a class="big-link-1 btn scroll-link" href="#pricing-2"><b>Call for papers</b></a>
             <a class="big-link-2 btn scroll-link" href="#portfolio"><b>Speakers</b></a>
@@ -863,7 +863,7 @@ Workshop registration will be handled by the main conference, please check <a hr
         </div>
         <div class="row">
             <div class="col-sm-7 footer-copyright">
-                &copy; Deep Learning for Music</a>.
+                &copy; Workshop for Emerging AI Technologies for Music</a>.
             </div>
             <div class="col-sm-5 footer-social">
                 <a href="#"><i class="fa fa-facebook"></i></a>
