added some bios

--- a/index.html
+++ b/index.html
@@ -216,7 +216,6 @@ Scientist at Google DeepMind on the Magenta Team. He finished his PhD in Compute
             </div>
         </div>
     </div>
-</div>
 
 
 
@@ -237,18 +236,17 @@ Scientist at Google DeepMind on the Magenta Team. He finished his PhD in Compute
                 </div>
             </div>
             <div class="col-sm-8 block-2-box block-2-right wow fadeInUp">
-            <h3>Dr. Kat Agres/ <span>A*STAR Institute of High Performance Computing</span> </h3>
+            <h3>Prof. Dorien Herremans/ <span>Singapore University of Technology and Design</span> </h3>
 <!--            <p><b>Researching at the intersection of neural networks and music cognition</b></p>-->
 <!--            <p>-->
 <!--            One brach of my current research seeks to simulate perceptual and cognitive processes in the domain of music through the use of both shallow and deep neural networks. My talk will discuss how NNs may be employed to model how humans learn tonal structure in music, as well as octave equivalence and harmonic expectation. Focus will be placed on how different representations, training corpora, and architectures may be used to simulate different populations of listeners (e.g., novice versus expert musicians).-->
 <!--            By taking this interdisciplinary approach between music, cognitive science, and computer science, we may both develop better computational tools and shed light on various aspects of music perception and cognition.-->
 <!---->
 <!--                </p>-->
-
                 <p>
                 <b>Bio</b>
-                Kat Agres received her PhD in Experimental Psychology from Cornell University in 2012. She also holds a bachelor's degree in Cognitive Psychology and Cello Performance from Carnegie Mellon University, and has received numerous grants to support her research, including a Fellowship from the National Institute of Health. She recently finished a postdoctoral research position at Queen Mary, University of London, where she was supported by a European Union Seventh Framework Programme grant investigating Computational Creativity. Her research explores a wide range of topics, including music cognition, computational models of music perception, auditory learning and memory, and computational creativity. She has presented her work at international workshops and conferences in over a dozen countries, and, in January 2017, Kat joined the A*STAR Institute of High Performance Computing (Social &amp; Cognitive Computing Department) in Singapore to start a program of research focused on music cognition.
-                </p>
+                Dorien is an Associate Professor at Singapore University of Technology and Design (SUTD), where she leads the Audio, Music, and AI (AMAAI) Lab. Before joining SUTD, she was a Marie Sklodowska-Curie Postdoctoral Fellow at the Centre for Digital Music at Queen Mary University of London. She was also nominated on the Singapore 100 Women in Tech list in 2021, and one of the top 30 SAIL Award (Super AI Leader) Finalists in 2024 at the World AI Conference.
+            </p>
                 <!--<h3>Follow Her:</h3>
                 <div class="about-social">
                     <a href="#"><i class="fa fa-facebook"></i></a>
@@ -267,6 +265,42 @@ Scientist at Google DeepMind on the Magenta Team. He finished his PhD in Compute
 
 
 
+
+<!-- Block 2 -->
+<div class="block-2-container section-container section-container-gray about-block-2-container">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-8 block-2-box block-2-left wow fadeInLeft">
+            <h3>Dr. Hanoi Hantrakul / <span>Universal Music Group</span></h3>
+<!--            <p><p><b>Deep Learning at Pandora</b></p>-->
+<!--            <p>-->
+<!--            -->
+<!--            Music streaming services nowadays offer large catalogues that expose new challenges in terms of automatically recommending music to tens of millions of users. At Pandora, around 75 billion "thumbs" and manual analyses for over 1.5 million songs have been gathered over the years. In this talk we will leverage some of these data by applying deep networks to both audio content and metadata with the goal of improving the listener experience. The basics of collaborative filtering and machine listening will be reviewed, framed under the music recommendation umbrella, and enhanced with various deep learning techniques.-->
+<!--            -->
+<!--                </p>-->
+<!--                -->
+                <p>
+                <b>Bio</b>
+                Lamtharn "Hanoi" Hantrakul is an AI Research Scientist and AI Sound Artist based in Bangkok, Thailand. His work explores how machine learning can empower music, arts and culture, particularly from Southeast Asia. With over 8 years of experience in the tech industry, he has developed state-of-the-art Generative AI models at Google, TikTok and ByteDance as a Senior AI Research Scientist. He is co-inventor of notable technologies including Google's open source DDSP library and the music large language model SEED-MUSIC deployed in Doubao (China's ChatGPT).
+
+As a sound artist performing under "yaboihanoi," his electronic music incorporates Thai tunings and rhythms. He won the 2022 international AI Song Contest with "Enter Demons and Gods" and has performed at SONAR Music Festival alongside artists like Skrillex and Four Tet. His musical instrument "Fidular" received an A' Silver Award and Core77 Design Award in 2017 and is permanently exhibited at the Musical Instruments Museum in Phoenix, AZ. His work on machine learning and cultural empowerment has been covered by international media including Deutschlandfunk, Scientific American and Fast Company.
+            </p>
+
+            </div>
+            <div class="col-sm-4 block-2-box block-2-left wow fadeInLeft">
+                <div class="block-2-img-container">
+                    <img src="assets/img/about/elio.jpg" alt="" data-at2x="assets/img/about/elio.jpg">
+                    <div class="img-container-line line-1"></div>
+                    <div class="img-container-line line-2"></div>
+                    <div class="img-container-line line-3"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+</div>
 
 <!--&lt;!&ndash; Counters &ndash;&gt;-->
 <!--<div class="counters-container section-container section-container-full-bg">-->
@@ -750,7 +784,6 @@ Workshop registration will be handled by the main conference, please check <a hr
                 <h2>Organizers</h2>
                 <div class="divider-1 wow fadeInUp"><span></span></div>
                 <p>
-
                 </p>
             </div>
         </div>
@@ -772,7 +805,7 @@ Workshop registration will be handled by the main conference, please check <a hr
             <div class="col-sm-8 block-2-box block-2-right wow fadeInUp">
                 <h3>Keshav Banhari / <span>Queen Mary University of London</span></h3>
                 <p>
-                    bio
+                    Keshav is a PhD candidate at the Centre for Digital Music (C4DM) at Queen Mary University of London supervised by Prof. Simon Colton. His research explores neuro-symbolic methods for music composition with a focus on musical structure and controllability. Prior to Queen Mary, he was part of the Interactive Audio Lab at Northwestern University, Evanston. Over the years, Keshav has published papers across conferences such as NeurIPS, AAAI, IJCNN and recently won the best paper award at EvoMUSART-25 (part of EvoStar). Keshav will be the main contact for the proposed AI music workshop at AAAI-26.
                 </p>
             </div>
         </div>
@@ -784,10 +817,9 @@ Workshop registration will be handled by the main conference, please check <a hr
     <div class="container">
         <div class="row">
             <div class="col-sm-8 block-2-box block-2-left wow fadeInLeft">
-                <h3>Prof. dr. Ching-Hua Chuan / <span>University of North Florida</span></h3>
+                <h3>Dr. Abhinaba Roy / <span>Singapore University of Technology and Design</span></h3>
                 <p>
-                    Ching-Hua Chuan is an associate professor of computing at University of North Florida. She received her Ph.D. in computer science from University of Southern California (Los Angeles, CA, USA) Viterbi School of Engineering, and her B.S. and M.S. degrees in electrical engineering from the National Taiwan University. Dr. Chuan’s research interests include audio signal processing, music information retrieval, artificial intelligence and machine learning. She has published refereed articles in journals and conferences on audio content analysis, style-specific music generation, machine learning applications, and music and multimedia information retrieval. She was the recipient of the best new investigator paper award at the Grace Hopper Celebration of Women in Computing in 2010. Dr. Chuan has served on the program committees of International Society of Music Information Retrieval, International Conference on Mathematics and Computation in Music, International Conference on New Interfaces for Musical Expression, IEEE International Workshop on Multimedia Information Processing and Retrieval, International ACM Workshop on Music Information Retrieval with User-Centred and Multimodal Strategies, and the scientific advisory committee for Music Similarity workshop at Lorentz center. She is also the founder of Women in Music Information Retrieval (WiMIR) and the co-director of Florida regional Botball educational robotics program.
-
+                    Abhinaba is a senior research fellow at Singapore University of Technology and Design. He received his Ph.D. in Computer Vision in 2019 from the Istituto Italiano di Tecnologia, Genoa, Italy. He has held positions in both industry and academia, focusing on developing and deploying practical AI solutions. In recent years, his research has increasingly focused on the intersection of AI and music, particularly in areas such as text-to-music generation, symbolic music creation, and multimodal music understanding. His work has been published in leading conferences including ISMIR, IJCNN, AAAI, and others.
                 </p>
             </div>
             <div class="col-sm-4 block-2-box block-2-right block-2-media wow fadeInUp">
@@ -800,6 +832,30 @@ Workshop registration will be handled by the main conference, please check <a hr
             </div>
         </div>
     </div>
+
+    <!-- Block 2 (team member) -->
+<div class="block-2-container section-container about-block-2-container">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-4 block-2-box block-2-left block-2-media wow fadeInLeft">
+                <div class="block-2-img-container">
+                    <img src="assets/img/about/dorien1_small.jpg" alt="" data-at2x="assets/img/about/dorien1_small.jpg">
+                    <div class="img-container-line line-1"></div>
+                    <div class="img-container-line line-2"></div>
+                    <div class="img-container-line line-3"></div>
+                </div>
+            </div>
+            <div class="col-sm-8 block-2-box block-2-right wow fadeInUp">
+                <h3>Prof. Simon Colton / <span>Queen Mary University of London</span></h3>
+                <p>
+                    Simon is a Professor of Computational Creativity, AI and Games in EECS at Queen Mary University of London. He was previously an EPSRC leadership fellow at Imperial College and Goldsmiths College, and held an ERA Chair at Falmouth University. He is an AI researcher with around 200 publications whose work has won national and international awards, and has led numerous EPSRC and EU-funded projects. He focuses specifically on questions of Computational Creativity, where researchers study how to engineer systems to take on creative responsibilities in generative music, arts and science projects. Prof. Colton has has written about the philosophy of Computational Creativity and led numerous public engagement projects.
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
+
+
 </div>
 
 
@@ -814,7 +870,7 @@ Workshop registration will be handled by the main conference, please check <a hr
                 <h2>Contact us</h2>
                 <div class="divider-1 wow fadeInUp"><span></span></div>
                 <p>
-                    You can contact the organizers through d [dot] herremans [a] qmul.ac.uk.
+                    You can contact the organizers through k [dot] bhandari [a] qmul.ac.uk.
                 </p>
             </div>
         </div>
