--- a/index.html
+++ b/index.html
@@ -856,6 +856,29 @@ Workshop registration will be handled by the main conference, please check <a hr
 </div>
 
 
+
+<!-- Block 2 (team member) -->
+<div class="block-2-container section-container section-container-gray about-block-2-container">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-8 block-2-box block-2-left wow fadeInLeft">
+                <h3>Prof. Dorien Herremans / <span>Singapore University of Technology and Design</span></h3>
+                <p>
+                    Dorien is an Associate Professor at Singapore University of Technology and Design (SUTD), where she leads the Audio, Music, and AI (AMAAI) Lab. Before joining SUTD, she was a Marie Sklodowska-Curie Postdoctoral Fellow at the Centre for Digital Music at Queen Mary University of London. She was also nominated on the Singapore 100 Women in Tech list in 2021, and one of the top 30 SAIL Award (Super AI Leader) Finalists in 2024 at the World AI Conference.
+                </p>
+            </div>
+            <div class="col-sm-4 block-2-box block-2-right block-2-media wow fadeInUp">
+                <div class="block-2-img-container">
+                    <img src="assets/img/about/chingua.png" alt="" data-at2x="assets/img/about/chingua.png">
+                    <div class="img-container-line line-1"></div>
+                    <div class="img-container-line line-2"></div>
+                    <div class="img-container-line line-3"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
 </div>
 
 
