updated PC members

--- a/index.html
+++ b/index.html
@@ -666,11 +666,15 @@ As a sound artist performing under "yaboihanoi," his electronic music incorporat
 </p>
 <p>
 <b>Programme Committee</b><br/>
-Dorien Herremans (Queen Mary University of London, UK)<br/>
-Ching-Hua Chuan (University of North-Florida, US)<br/>
-Louis Bigo (Universite Lille 3, France)<br/>
-Maarten Grachten (Austrian Research Institute for Artificial Intelligence, Austria)<br/>
-Sebastian Stober (University of Potsdam, Germany)<br/>
+Prof. Dorien Herremans, Singapore University of Technology and Design (editor/reviewer) <br/>
+Keshav Banhari, PhD candidate, Queen Mary University of London (editor/reviewer)<br/>
+Dr. Abhinaba Roy, Singapore University of Technology and Design (editor/reviewer)<br/>
+Prof. Simon Colton, Queen Mary University of London (editor/reviewer)<br/>
+Prof. Mathieu Barthet, Queen Mary University of London (editor/reviewer)<br/>
+Dr. Benjamin Hayes, Sony CSL, Paris (reviewer)<br/>
+Dr. Jaeyong Kang, Singapore University of Technology and Design (reviewer)<br/>
+Dr. Berker Banar, Ellison Institute of Technology Oxford (reviewer)<br/>
+    <br/>
 </p>
 <p>
 
@@ -678,7 +682,7 @@ Sebastian Stober (University of Potsdam, Germany)<br/>
 Paper Submission Deadline: tbd<br/>
 Acceptance Notification: tbd<br/>
 Final versions due: tbd<br/>
-Workshop Date: 26-27 Jan 2026<br/>
+Workshop Date: 26 or 27 Jan 2026<br/>
 
 </p><p>
 <b>Registration</b><br/>
