--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
     <![endif]-->
 
     <!-- Favicon and touch icons -->
-    <link rel="shortcut icon" href="assets/ico/favicon.png">
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="assets/ico/apple-touch-icon-144-precomposed.png">
+    <link rel="shortcut icon" href="assets/ico/favi.png">
+    <!-- <link rel="apple-touch-icon-precomposed" sizes="144x144" href="assets/ico/apple-touch-icon-144-precomposed.png">
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/ico/apple-touch-icon-114-precomposed.png">
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/ico/apple-touch-icon-72-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" href="assets/ico/apple-touch-icon-57-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" href="assets/ico/apple-touch-icon-57-precomposed.png"> -->
 
 
 </head>
@@ -208,7 +208,7 @@ Scientist at Google DeepMind on the Magenta Team. He finished his PhD in Compute
             </div>
             <div class="col-sm-4 block-2-box block-2-left wow fadeInLeft">
                 <div class="block-2-img-container">
-                    <img src="assets/img/about/elio.jpg" alt="" data-at2x="assets/img/about/elio.jpg">
+                    <img src="assets/img/about/elio2.png" alt="" data-at2x="assets/img/about/elio2.png">
                     <div class="img-container-line line-1"></div>
                     <div class="img-container-line line-2"></div>
                     <div class="img-container-line line-3"></div>
@@ -229,7 +229,7 @@ Scientist at Google DeepMind on the Magenta Team. He finished his PhD in Compute
         <div class="row">
             <div class="col-sm-4 block-2-box block-2-left block-2-media wow fadeInLeft">
                 <div class="block-2-img-container">
-                    <img src="assets/img/about/katagres.jpg" alt="" data-at2x="assets/img/about/katagres.jpg">
+                    <img src="assets/img/about/dorien.png" alt="" data-at2x="assets/img/about/dorien.png">
                     <div class="img-container-line line-1"></div>
                     <div class="img-container-line line-2"></div>
                     <div class="img-container-line line-3"></div>
@@ -289,7 +289,7 @@ As a sound artist performing under "yaboihanoi," his electronic music incorporat
             </div>
             <div class="col-sm-4 block-2-box block-2-left wow fadeInLeft">
                 <div class="block-2-img-container">
-                    <img src="assets/img/about/elio.jpg" alt="" data-at2x="assets/img/about/elio.jpg">
+                    <img src="assets/img/about/hanoi.jpeg" alt="" data-at2x="assets/img/about/hanoi.jpeg">
                     <div class="img-container-line line-1"></div>
                     <div class="img-container-line line-2"></div>
                     <div class="img-container-line line-3"></div>
@@ -800,7 +800,7 @@ Workshop registration will be handled by the main conference, please check <a hr
         <div class="row">
             <div class="col-sm-4 block-2-box block-2-left block-2-media wow fadeInLeft">
                 <div class="block-2-img-container">
-                    <img src="assets/img/about/dorien1_small.jpg" alt="" data-at2x="assets/img/about/dorien1_small.jpg">
+                    <img src="assets/img/about/keshav.jpg" alt="" data-at2x="assets/img/about/keshav.jpg">
                     <div class="img-container-line line-1"></div>
                     <div class="img-container-line line-2"></div>
                     <div class="img-container-line line-3"></div>
@@ -828,7 +828,7 @@ Workshop registration will be handled by the main conference, please check <a hr
             </div>
             <div class="col-sm-4 block-2-box block-2-right block-2-media wow fadeInUp">
                 <div class="block-2-img-container">
-                    <img src="assets/img/about/chingua.png" alt="" data-at2x="assets/img/about/chingua.png">
+                    <img src="assets/img/about/roy.jpeg" alt="" data-at2x="assets/img/about/roy.jpeg">
                     <div class="img-container-line line-1"></div>
                     <div class="img-container-line line-2"></div>
                     <div class="img-container-line line-3"></div>
@@ -843,7 +843,7 @@ Workshop registration will be handled by the main conference, please check <a hr
         <div class="row">
             <div class="col-sm-4 block-2-box block-2-left block-2-media wow fadeInLeft">
                 <div class="block-2-img-container">
-                    <img src="assets/img/about/dorien1_small.jpg" alt="" data-at2x="assets/img/about/dorien1_small.jpg">
+                    <img src="assets/img/about/simon.jpeg" alt="" data-at2x="assets/img/about/simon.jpeg">
                     <div class="img-container-line line-1"></div>
                     <div class="img-container-line line-2"></div>
                     <div class="img-container-line line-3"></div>
@@ -873,7 +873,7 @@ Workshop registration will be handled by the main conference, please check <a hr
             </div>
             <div class="col-sm-4 block-2-box block-2-right block-2-media wow fadeInUp">
                 <div class="block-2-img-container">
-                    <img src="assets/img/about/chingua.png" alt="" data-at2x="assets/img/about/chingua.png">
+                    <img src="assets/img/about/dorien.png" alt="" data-at2x="assets/img/about/dorien.png">
                     <div class="img-container-line line-1"></div>
                     <div class="img-container-line line-2"></div>
                     <div class="img-container-line line-3"></div>
@@ -946,14 +946,14 @@ Workshop registration will be handled by the main conference, please check <a hr
         </div>
         <div class="row">
             <div class="col-sm-7 footer-copyright">
-                &copy; Workshop for Emerging AI Technologies for Music</a>.
+                &copy; Workshop for Emerging AI Technologies for Music (EAIM2026)</a>.
             </div>
             <div class="col-sm-5 footer-social">
-                <a href="#"><i class="fa fa-facebook"></i></a>
+                <!-- <a href="#"><i class="fa fa-facebook"></i></a>
                 <a href="#"><i class="fa fa-dribbble"></i></a>
                 <a href="#"><i class="fa fa-twitter"></i></a>
                 <a href="#"><i class="fa fa-google-plus"></i></a>
-                <a href="#"><i class="fa fa-pinterest"></i></a>
+                <a href="#"><i class="fa fa-pinterest"></i></a> -->
             </div>
         </div>
     </div>
