--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                 </div>
             </div>
             <div class="col-sm-8 block-2-box block-2-right wow fadeInUp">
-            <h3>Dr. Ethan Manilow <span>Google DeepMind</span> </h3>
+            <h3>Dr. Ethan Manilow / <span>Google DeepMind</span> </h3>
             
 <!--            <p><b>Using Deep Learning and Reinforcement Learning to Generate Music Audio and Scores</b></p>-->
 <!--            -->
@@ -271,7 +271,7 @@ Scientist at Google DeepMind on the Magenta Team. He finished his PhD in Compute
     <div class="container">
         <div class="row">
             <div class="col-sm-8 block-2-box block-2-left wow fadeInLeft">
-            <h3>Dr. Hanoi Hantrakul / <span>Universal Music Group</span></h3>
+            <h3>Dr. Hanoi Hantrakul / <span>ex-Google/ByteDance/Doubao</span></h3>
 <!--            <p><p><b>Deep Learning at Pandora</b></p>-->
 <!--            <p>-->
 <!--            -->
@@ -667,7 +667,7 @@ As a sound artist performing under "yaboihanoi," his electronic music incorporat
 <p>
 <b>Programme Committee</b><br/>
 Prof. Dorien Herremans, Singapore University of Technology and Design (editor/reviewer) <br/>
-Keshav Banhari, PhD candidate, Queen Mary University of London (editor/reviewer)<br/>
+Keshav Bhandari, PhD candidate, Queen Mary University of London (editor/reviewer)<br/>
 Dr. Abhinaba Roy, Singapore University of Technology and Design (editor/reviewer)<br/>
 Prof. Simon Colton, Queen Mary University of London (editor/reviewer)<br/>
 Prof. Mathieu Barthet, Queen Mary University of London (editor/reviewer)<br/>
