Revise submission details and add new sections
Updated submission requirements and added topics of interest and important dates sections.

--- a/index.html
+++ b/index.html
@@ -580,8 +580,9 @@
                         <a href="http://dorienherremans.com/dlm2017/proceedings.pdf">Download the Proceedings</a>
                         
                         </p><p> -->
-                     <b>Submissions of Papers</b><br/>
-                     Details to follow soon. 
+                     <b>Submission Requirements</b><br/>
+                     Maximum 6 pages in LNCS format. Work-in-progress submissions are welcome; authors are encouraged to include prototype descriptions (conceptual designs without practical implementation evidence are discouraged).
+                     We particularly welcome submissions that emphasize controllability, interpretability, explainability, personalization, human–AI interaction and collaboration in music systems.                     
                      <!-- Papers of up to 5 pages using the following template are welcomed for a talk. Submissions will be evaluated according to their originality, technical soundness and relevance to the workshop. The guidelines in of the workshop’s latex <a href="./dlm17template.zip">template</a> should be followed. Contributions should be in PDF format and submitted to d.herremans@qmul.ac.uk with the subject line: [DLM17 paper submission]. Submissions do not need to be anonymized. Papers will be peer-reviewed and published in the proceedings of the workshop.
                         </p><p>
                         <b>Submissions of Abstracts</b><br/>
@@ -591,6 +592,53 @@
                         <b>Special Issue in Journal</b><br/>
                         Authors will be invited to submit a full paper version of their extended abstract for a special issue on deep learning for music and audio in Springer's Neural Computing Applications.  -->
                   </p>
+                  <section class="section" aria-labelledby="topics">
+                  <h3 id="topics" style="font-size:1rem; margin-bottom:8px;">Topics of interest (include, but not limited to)</h3>
+                  <ul class="topics">
+                    <li>Music composition and generation</li>
+                    <li>Foundational music models</li>
+                    <li>Music production workflows</li>
+                    <li>Music education and pedagogy</li>
+                    <li>Music performance systems</li>
+                    <li>Music information retrieval</li>
+                    <li>Sound design and audio production</li>
+                    <li>Music therapy applications</li>
+                    <li>Music transcription and analysis</li>
+                    <li>Singing voice synthesis</li>
+                    <li>Evaluation of music AI systems</li>
+                    <li>Music recommender systems</li>
+                    <li>Musical instrument design</li>
+                    <li>Robotic musicianship</li>
+                    <li>Optical music recognition</li>
+                    <li>Music theory and musicology</li>
+                    <li>Ethical, cultural and societal implications</li>
+                    <li>Accessibility and inclusion in music AI</li>
+                  </ul>
+                </section>
+
+                <section class="section" aria-labelledby="deadlines">
+                  <h3 id="deadlines" style="font-size:1rem; margin-bottom:8px;">Important dates</h3>
+                  <table class="deadlines" role="table" aria-describedby="deadline-note">
+                    <tr>
+                      <th scope="row">Paper submission deadline</th>
+                      <td>29 October 2025</td>
+                    </tr>
+                    <tr>
+                      <th scope="row">Acceptance / Rejection notification</th>
+                      <td>14 November 2025</td>
+                    </tr>
+                    <tr>
+                      <th scope="row">Camera-ready deadline</th>
+                      <td>30 November 2025</td>
+                    </tr>
+                  </table>
+                  <p id="deadline-note" class="foot">Maximum length: 6 pages (LNCS). Submissions exceeding this will not be reviewed.</p>
+                </section>
+            
+                <section class="section" aria-labelledby="publishing">
+                  <h2 id="publishing" style="font-size:1rem; margin-bottom:8px;">Publishing venue</h2>
+                  <p class="muted">Proceedings will be arranged with the publisher (to be announced later).</p>
+                </section>
                   <p>
                      <b>Programme Committee</b><br/>
                      Prof. Dorien Herremans, Singapore University of Technology and Design (editor/reviewer) <br/>
