--- a/index.html
+++ b/index.html
@@ -279,11 +279,9 @@
                         Authors will be invited to submit a full paper version of their extended abstract for a special issue on deep learning for music and audio in Springer's Neural Computing Applications.  -->
                   </p>
             
-                <section class="section" aria-labelledby="publishing">
-                  <h2 id="publishing" style="font-size:1rem; margin-bottom:8px;">Publishing venue</h2>
-                  <p class="muted">Proceedings will be arranged with the publisher (to be announced later).</p>
-                </section>
-                  <p>
+                  <b>Publishing venue</b>
+                  <p>Proceedings will be arranged with the publisher (to be announced later).</p>
+                
                      <b>Programme Committee</b><br/>
                      Prof. Dorien Herremans, Singapore University of Technology and Design (editor/reviewer) <br/>
                      Keshav Bhandari, PhD candidate, Queen Mary University of London (editor/reviewer)<br/>
