--- a/index.html
+++ b/index.html
@@ -279,8 +279,8 @@
                         Authors will be invited to submit a full paper version of their extended abstract for a special issue on deep learning for music and audio in Springer's Neural Computing Applications.  -->
                   </p>
             
-                  <b>Publishing venue</b>
-                  <p>Proceedings will be arranged with the publisher (to be announced later).</p>
+                  <p><b>Publishing venue</b>
+                  Proceedings are currently being arranged with the publisher (to be announced later).</p>
                 
                      <b>Programme Committee</b><br/>
                      Prof. Dorien Herremans, Singapore University of Technology and Design (editor/reviewer) <br/>
@@ -295,7 +295,7 @@
                   </p>
                   <p>
                      <b>Important Dates</b><br/>
-                     Paper Submission Deadline: tbd<br/>
+                     Paper Submission Deadline: 22 October (AOE)<br/>
                      Acceptance Notification: tbd<br/>
                      Final versions due: tbd<br/>
                      Workshop Date: 26 or 27 Jan 2026<br/>
