--- a/index.html
+++ b/index.html
@@ -279,9 +279,11 @@
                         Authors will be invited to submit a full paper version of their extended abstract for a special issue on deep learning for music and audio in Springer's Neural Computing Applications.  -->
                   </p>
             
-                  <p><b>Publishing venue</b>
+                  <p>
+                     <b>Proceedings publisher</b>
                   Proceedings are currently being arranged with the publisher (to be announced later).</p>
-                
+                </p>
+                <p>
                      <b>Programme Committee</b><br/>
                      Prof. Dorien Herremans, Singapore University of Technology and Design (editor/reviewer) <br/>
                      Keshav Bhandari, PhD candidate, Queen Mary University of London (editor/reviewer)<br/>
